k8s/namespaces/media/tdarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
  namespace: media
  labels:
    app.kubernetes.io/name: tdarr
    app.kubernetes.io/managed-by: flux
  annotations:
    goldilocks.fairwinds.com/vpa-resource-policy: >
      { "containerPolicies": [
      { "containerName": "tdarr",
      "minAllowed": { "cpu": "50m", "memory": "256Mi" },
      "maxAllowed": { "cpu": "4000m", "memory": "2Gi" },
      "controlledValues": "RequestsOnly" } ] }
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tdarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tdarr
        app.kubernetes.io/managed-by: flux
    spec:
      securityContext:
        supplementalGroups:
          - 44
      automountServiceAccountToken: false
      containers:
        - name: tdarr
          # renovate: datasource=docker depName=ghcr.io/haveagitgat/tdarr
          image: ghcr.io/haveagitgat/tdarr:latest@sha256:7a992a0f1e0e6b16a7514b498ee4072d238ede079f4f472d6c0130b438ed63ac
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8265
              protocol: TCP
            - containerPort: 8266
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "1Gi"
              nvidia.com/gpu: "1"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "4000m"
              memory: "8Gi"
              nvidia.com/gpu: "1"
              ephemeral-storage: "20Gi"
          livenessProbe:
            tcpSocket:
              port: 8265
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 8265
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - name: config
              mountPath: /app/configs
            - name: server
              mountPath: /app/server
            - name: logs
              mountPath: /app/logs
            - name: media
              mountPath: /media
              subPath: media
            - name: temp
              mountPath: /temp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tdarr-config
        - name: server
          persistentVolumeClaim:
            claimName: tdarr-server
        - name: logs
          persistentVolumeClaim:
            claimName: tdarr-logs
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: temp
          persistentVolumeClaim:
            claimName: tdarr-temp
