k8s/namespaces/media/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: media
  labels:
    app.kubernetes.io/name: tdarr
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: tdarr
    app.kubernetes.io/managed-by: flux
  ports:
    - port: 8265
      targetPort: 8265
      protocol: TCP
      name: tdarr-ui
    - port: 8266
      targetPort: 8266
      protocol: TCP
      name: tdarr-server
  type: ClusterIP
